--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"bootstrap": "^5.3.2",
+		"html-to-image": "^1.11.11",
 		"preact": "^10.13.1"
 	},
 	"devDependencies": {
