--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"eslint": "eslint --ext ts ./src/modules/*",
-		"eslint-fix": "eslint --ext ts --fix ./src/modules/*"
+		"eslint-fix": "eslint --ext ts --fix ./src/modules/*",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build"
 	},
+	"homepage": "https://github.com/Crobat4/vp-pro-trainer-card/#readme",
 	"dependencies": {
 		"@fortawesome/fontawesome-svg-core": "^6.4.2",
 		"@fortawesome/free-brands-svg-icons": "^6.4.2",
@@ -45,6 +48,7 @@
 		"eslint": "^8.53.0",
 		"eslint-config-preact": "^1.3.0",
 		"eslint-plugin-react": "^7.33.2",
+		"gh-pages": "^6.1.0",
 		"less": "^4.2.0",
 		"typescript": "^5.2.2",
 		"vite": "^4.3.2",
