--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,13 @@
 		"paths": {
 			"react": ["./node_modules/preact/compat/"],
 			"react-dom": ["./node_modules/preact/compat/"],
-			"*" : ["src/*"]
+			"src/*" : ["src/*"],
+			"components/*": [ "./src/components/*" ],
+			"components": [ "./src/components" ],
+			"assets/*": [ "./src/assets/*" ],
+			//"Assets": [ "./src/assets" ]
+			"modules/*": [ "./src/modules/*" ],
+			"styles/*": [ "./src/styles/*" ],
 		}
 	},
 	"include": [
