--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"preact": "^10.13.1",
 		"prop-types": "^15.8.1",
 		"react-bootstrap": "^2.9.1",
+		"react-hooks-global-state": "^2.1.0",
 		"react-infinite-scroller": "^1.2.6",
 		"react-lazy-load-image-component": "^1.6.0",
 		"react-popper": "^2.3.0",
