--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
 		"preact": "^10.13.1",
 		"prop-types": "^15.8.1",
 		"react-bootstrap": "^2.9.1",
+		"react-bootstrap-icons": "^1.10.3",
 		"react-hooks-global-state": "^2.1.0",
 		"react-infinite-scroller": "^1.2.6",
 		"react-lazy-load-image-component": "^1.6.0",
 		"react-popper": "^2.3.0",
+		"react-pro-sidebar": "^1.1.0-alpha.1",
 		"react-select": "^5.8.0",
 		"react-window": "^1.8.9",
 		"react-window-infinite-loader": "^1.0.9",
