--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
 		"preview": "vite preview",
 		"eslint": "eslint src/**/*.{js,ts,jsx,tsx}",
 		"eslint-fix": "eslint --fix src/**/*.{js,ts,jsx,tsx}",
-		"predeploy": "npm run build && cp README.md docs || copy README.md docs",
-		"deploy": "gh-pages -b master-bak10 -d docs -m \"[v%npm_package_version%] Live website\" -g %npm_package_version%",
+		"copy-files": "(cp README.md dist || copy README.md dist) && (cp package.json dist || copy package.json dist)",
+		"predeploy": "npm run build && cp README.md dist || copy README.md docs",
+		"deploy": "gh-pages -b master-bak15 -d dist -m \"[v%npm_package_version%] Live website\" -g %npm_package_version%",
 		"publish": "npm run build && node publish.js",
 		"test": "gh-pages --help"
 	},
