--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
 		"preview": "vite preview",
 		"eslint": "eslint src/**/*.{js,ts,jsx,tsx}",
 		"eslint-fix": "eslint --fix src/**/*.{js,ts,jsx,tsx}",
-		"predeploy": "npm run build && cp README.md dist || copy README.md dist",
-		"deploy": "gh-pages -b master -d dist -m \"[v%npm_package_version%] Live website\" -g %npm_package_version%",
-		"publish": "npm run build && node publish.js",
+		"deploy": "gh-pages -t -b master -d dist -m \"[v%npm_package_version%] Live website\" -g %npm_package_version%",
+		"publish": "npm run build && node publish.js && npm run deploy",
 		"test": "gh-pages --help"
 	},
 	"homepage": "https://github.com/Crobat4/vp-pro-trainer-card/#readme",
